--- a/templates/forumpage.html
+++ b/templates/forumpage.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
-{% block title %}page1{% endblock %}
+{% block title %}forumpage{% endblock %}
 
 {% block content %}
-  <h1>This is Page 1</h1>
+  <h1>This is the Forum</h1>
 
 <p>Lorem ipsum sit dolor amet.</p>
 
