--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,10 +14,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/page1">Page 1</a></li>
+        <li><a href="/forumpage">Forum Page</a></li>
         <li><a href="/page2">Page 2</a></li>
       </ul>
-      
+
       <ul class="nav navbar-nav navbar-right">
 	{% if logged_in %}
         <li><p class="navbar-text">{{ session['user_data']['name']}}</li>
