--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/forumpage">Forum Page</a></li>
-        <li><a href="/page2">Page 2</a></li>
+    <!--    <li><a href="/forumpage">Forum Page</a></li> -->
+        <li><a href="/about">About</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
