--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
-{% block title %}page2{% endblock %}
+{% block title %}about{% endblock %}
 
 {% block content %}
-  <h1>This is Page 2</h1>
+  <h1>About this Website</h1>
 
 <p>Lorem ipsum</p>
 
