--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,9 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-  <h1>Home</h1>
+  <h1>Welcome to NYC!</h1>
 
-<p>This is a forum sharing information about New York City, and everything that goes on in the Big Apple.</p>
+<h4>This is a forum sharing information about New York City, and everything that goes on in the Big Apple.</h4>
 
 <form action = "/forumpage" id="postform" method="post">
     <textarea name="message" rows="6" cols="90"></textarea>
