--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <title>{% block title %}{% endblock %} - My Webpage</title>
 
+  <link rel="icon" type="image/x-icon" href="/static/monkey.jpg">
 
   </head>
   <body>
@@ -36,5 +37,3 @@
 
   </body>
 </html>
-
-
