--- a/static/style.css
+++ b/static/style.css
@@ -17,6 +17,13 @@ h4{
 }
 #based{
     text-align: center;
-    font-size: 25px;
+    font-size: 100px;
     font-style: oblique;
+}
+.card{
+    max-width:800px;
+    margin-top: 15px;
+    margin-left:auto;
+    margin-right: auto;
+
 }
