--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,10 +17,10 @@
 
   </ul>
 
-  <ul class="nav navbar-nav navbar-right">
+  <ul class="nav navbar-nav ml-auto">
 {% if logged_in %}
-    <li><p class="navbar-text">{{ session['user_data']['name']}}</li>
-    <li><p class="navbar-text">Github userid: {{ session['user_data']['login']}}</li>
+    
+    <li><p class="navbar-text">Github UserID: {{ session['user_data']['login']}}</li>
 {% endif %}
     <li>
   {% if logged_in %}
