--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,7 @@ body {
 }
 h1{
     text-align: center;
+    font-weight: bold;
 }
 h4{
     text-align: center;
@@ -29,4 +30,10 @@ h4{
 }
 .card-title{
     text-align: left;
+}
+.nav-item{
+    font-size: 20px;
+}
+.navbar-text{
+    font-size: 16px;
 }
