--- a/templates/about.html
+++ b/templates/about.html
@@ -6,5 +6,9 @@
   <h1>About this Website</h1>
 
 <p id=based>fagetaboutit</p>
+<h5> Created by people with a passion for New York City, this forum serves as a place to share and discuss information
+   related to the Big Apple, its world famous resturaunts, parks, shopping, culture, and everything else one may find in the city.
+ NYC has been and remains home to some of the biggest celecerties in the world past and present including the
+ Notorious B.I.G., Marylin Monroe, Stan Lee, Pop Smoke, and JAY-Z.   </h5>
 
 {% endblock %}
